Incluir o teste - começa a quebrar no terminal mas tudo Ok nas ferramentas do Intellij

--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,14 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
+
+        <!--TEST-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
