--- a/legis/pom.xml
+++ b/legis/pom.xml
@@ -15,6 +15,14 @@
     <version>1.0.0</version>
 
     <dependencies>
+
+        <!--SPRING-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!--AUTHENTICATION-->
         <dependency>
             <groupId>br.com.jusapi</groupId>
             <artifactId>authentication</artifactId>
