--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -5,66 +5,32 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>jusapi</artifactId>
+        <artifactId>root-app</artifactId>
         <groupId>br.com.jusapi</groupId>
         <version>1.0.0</version>
     </parent>
 
-    <name>UI ------------- MODULE</name>
     <artifactId>ui</artifactId>
-    <version>1.0.0</version>
+    <version>0.0.1</version>
+
+    <properties>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
+        <!--SPRING-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-webflux</artifactId>
+        </dependency>
 
-        <!--LOCAL MODULES-->
         <dependency>
             <groupId>br.com.jusapi</groupId>
             <artifactId>authentication</artifactId>
             <version>1.0.0</version>
         </dependency>
-        <dependency>
-            <groupId>br.com.jusapi</groupId>
-            <artifactId>legis</artifactId>
-            <version>1.0.0</version>
-        </dependency>
-
-        <!--SPRING-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
     </dependencies>
-
-    <build>
-        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
-        <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>2.7.14</version>
-            </plugin>
-            <plugin>
-                <groupId>org.jetbrains.kotlin</groupId>
-                <artifactId>kotlin-maven-plugin</artifactId>
-                <configuration>
-                    <args>
-                        <arg>-Xjsr305=strict</arg>
-                    </args>
-                    <compilerPlugins>
-                        <plugin>spring</plugin>
-                    </compilerPlugins>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.jetbrains.kotlin</groupId>
-                        <artifactId>kotlin-maven-allopen</artifactId>
-                        <version>${kotlin.version}</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
