--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -18,6 +18,15 @@
     </properties>
 
     <dependencies>
+        <!--SPRING-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>6.0.11</version>
+        </dependency>
+
+
+        <!--LOCAL MODULES-->
         <dependency>
             <groupId>br.com.jusapi</groupId>
             <artifactId>model</artifactId>
