Include OAuth2 GitHub Login

--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>spring-boot-starter-webflux</artifactId>
         </dependency>
 
+        <!--OAUTH2-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-client</artifactId>
+        </dependency>
+
         <!--JUSAPI - AUTHENTICATION-->
         <dependency>
             <groupId>br.com.jusapi</groupId>
