--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -23,7 +23,7 @@
         <!--SPRING-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!-- SPRING - OAUTH2 -->
         <dependency>
