--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -2,27 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>root-app</artifactId>
-        <groupId>br.com.jusapi</groupId>
-        <version>1.0.0</version>
-    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>authentication</artifactId>
+    <parent>
+        <groupId>br.com.jusapi</groupId>
+        <artifactId>root-app</artifactId>
+        <version>1.0.0</version>
+    </parent>
 
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <artifactId>authentication</artifactId>
+    <version>0.0.1</version>
+    <name>AUTHENTICATION ----- MODULE</name>
 
     <dependencies>
         <!--SPRING-->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
-            <version>6.0.11</version>
+            <version>${spring.version}</version>
         </dependency>
 
 
