--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,13 +10,8 @@
         <version>1.0.0</version>
     </parent>
 
-    <version>0.0.1</version>
     <artifactId>model</artifactId>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <version>0.0.1</version>
+    <name>MODEL -------------- MODULE</name>
 
 </project>
