--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -12,12 +12,7 @@
 
     <artifactId>ui</artifactId>
     <version>0.0.1</version>
-
-    <properties>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <name>UI ----------------- MODULE</name>
 
     <dependencies>
         <!--SPRING-->
