--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>ui</module>
         <module>authentication</module>
         <module>model</module>
+        <module>legis</module>
     </modules>
 
     <properties>
