--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -29,6 +29,16 @@
             <artifactId>model</artifactId>
             <version>0.0.1</version>
         </dependency>
+
+        <!--TEST-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
 </project>
