--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
         <spring.version>6.0.11</spring.version>
         <spring.starter.version>3.1.2</spring.starter.version>
         <kotlin.version>1.8.21</kotlin.version>
+        <junit.jupiter.version>5.9.1</junit.jupiter.version>
+        <mockito-junit-jupiter.version>5.4.0</mockito-junit-jupiter.version>
     </properties>
 
     <dependencies>
@@ -45,7 +47,7 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.9.1</version>
+            <version>${junit.jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
