--- a/trabalhista/pom.xml
+++ b/trabalhista/pom.xml
@@ -10,9 +10,11 @@
         <version>1.0.0</version>
     </parent>
 
-    <artifactId>legis</artifactId>
+
+    <groupId>br.com.jusapi</groupId>
+    <artifactId>trabalhista</artifactId>
     <version>0.0.1</version>
-    <name>LEGIS -------------- MODULE</name>
+    <name>TRABALHISTA -------- MODULE</name>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
