--- a/model/pom.xml
+++ b/model/pom.xml
@@ -10,6 +10,8 @@
         <version>1.0.0</version>
     </parent>
 
+
+    <groupId>br.com.jusapi</groupId>
     <artifactId>model</artifactId>
     <version>0.0.1</version>
     <name>MODEL -------------- MODULE</name>
