--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -10,6 +10,7 @@
         <version>1.0.0</version>
     </parent>
 
+    <groupId>br.com.jusapi</groupId>
     <artifactId>ui</artifactId>
     <version>0.0.1</version>
     <name>UI ----------------- MODULE</name>
@@ -44,9 +45,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>co.jusapi</groupId>
+            <groupId>br.com.jusapi</groupId>
             <artifactId>authentication</artifactId>
-            <version>1.0.0</version>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
