--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.1.2</version>
+        <groupId>br.com.jusapi</groupId>
+        <artifactId>root-app</artifactId>
+        <version>1.0.0</version>
     </parent>
 
     <groupId>br.com.jusapi</groupId>
     <artifactId>authentication</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.5</version>
     <name>AUTHENTICATION ----- MODULE</name>
 
     <properties>
@@ -43,7 +43,7 @@
         <dependency>
             <groupId>br.com.jusapi</groupId>
             <artifactId>model</artifactId>
-            <version>0.0.1</version>
+            <version>0.0.5</version>
         </dependency>
 
         <!--TEST-->
