--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,19 @@
-/authentication/target/
 /.idea/
-/model/target/
-/ui/target/
-/target/failsafe-reports/
-/legis/target/
-/trabalhista/target/failsafe-reports/failsafe-summary.xml
-/trabalhista/target/maven-archiver/pom.properties
-/trabalhista/target/trabalhista-0.0.1.jar
-/authentication/.idea/.gitignore
-/authentication/.idea/compiler.xml
-/authentication/.idea/encodings.xml
-/authentication/.idea/jarRepositories.xml
-/authentication/.idea/kotlinc.xml
-/authentication/.idea/misc.xml
-/authentication/.idea/vcs.xml
-/model/.idea/.gitignore
-/model/.idea/compiler.xml
-/model/.idea/encodings.xml
-/model/.idea/jarRepositories.xml
-/model/.idea/kotlinc.xml
-/model/.idea/misc.xml
-/model/.idea/vcs.xml
-/ui/.idea/.gitignore
-/ui/.idea/compiler.xml
-/ui/.idea/encodings.xml
-/ui/.idea/jarRepositories.xml
-/ui/.idea/kotlinc.xml
-/ui/.idea/misc.xml
-/ui/.idea/vcs.xml
-/trabalhista/target/trabalhista-0.0.5.jar
-/legis/trabalhista.iml
+/target/
 /jusapi.iml
+
+/model/.idea/
+/model/target/
+/model/model.iml
+
+/ui/.idea/
+/ui/target/
+/ui/ui.iml
+
+/trabalhista/target/
+/trabalhista/.idea/
+/trabalhista/trabalhista.iml
+
+/authentication/.idea/
+/authentication/target/
+/authentication/authentication.iml
