--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -31,6 +31,14 @@
             <version>0.0.5</version>
         </dependency>
 
+        <!--LOG-->
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.2</version>
+        </dependency>
+
+
         <!--TEST-->
         <dependency>
             <groupId>org.mockito</groupId>
