--- a/ui/pom.xml
+++ b/ui/pom.xml
@@ -34,6 +34,13 @@
             <version>0.0.5</version>
         </dependency>
 
+        <!--OBJECT MAPPER-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.module</groupId>
+            <artifactId>jackson-module-kotlin</artifactId>
+            <version>2.9.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
