--- a/core/pom.xml
+++ b/core/pom.xml
@@ -16,18 +16,12 @@
     <name>CORE --------------- MODULE</name>
 
     <dependencies>
-
-        <!--SPRING-->
         <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
+            <groupId>javax.inject</groupId>
+            <artifactId>javax.inject</artifactId>
+            <version>1</version>
+            <scope>provided</scope>
         </dependency>
-        <!--<dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-        </dependency>-->
-
     </dependencies>
 
     <build>
